[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/SpriteSheet.sprites/pause.tres" type="Texture" id=1]
[ext_resource path="res://assets/images/SpriteSheet.sprites/start.tres" type="Texture" id=2]
[ext_resource path="res://assets/images/SpriteSheet.sprites/life.tres" type="Texture" id=3]
[ext_resource path="res://scripts/ui/src/UIGame.gd" type="Script" id=4]
[ext_resource path="res://assets/themes/UITheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/fonts/ArtFont.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[node name="UIGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="BtnPause" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 418.0
margin_top = 15.0
margin_right = 465.0
margin_bottom = 65.0
grow_horizontal = 2
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 116.0
margin_bottom = 69.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 75.0
margin_bottom = 54.0
texture = ExtResource( 3 )

[node name="LbLife" type="Label" parent="HBoxContainer"]
margin_left = 79.0
margin_top = 5.0
margin_right = 109.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="LbScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -78.5
margin_top = 20.0
margin_right = 78.5
margin_bottom = 68.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Score:0"
align = 1

[connection signal="pressed" from="BtnPause" to="." method="_on_BtnPause_pressed"]
